<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhoneUAV</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="ch_rudder">rudder:</string>
    <string name="ch_aileron">roll.:</string>
    <string name="ch_elevator">elev.:</string>
    <string name="ch_throttle">throttle:</string>

    <string name="ch_elevon_left">l. ail.:</string>
    <string name="ch_elevon_right">r. ail.:</string>

    <string name="duty_cycle">Duty Cycle(%)</string>
    <string name="degree">degree</string>
    <string name="get_info">getInfo</string>
    <string name="alt_spoof">Altitude spoofing</string>
    <string name="options">Options</string>
    <string name="close">Close</string>
    <string name="help">Help</string>
    <string name="pref_period_title">Period (PWM)</string>
    <string name="switch_orientation_title">Rotate</string>
    <string name="set_channel_order">Channel order:</string>
    <string name="pref_servo_elevator_min">Elevator min</string>
    <string name="pref_servo_elevator_max">Elevator max</string>
    <string name="pref_servo_rudder_min">Rudder min</string>
    <string name="pref_servo_rudder_max">Rudder max</string>
    <string name="pref_servo_elevon_min">Elevon min</string>
    <string name="pref_servo_elevon_max">Elevon max</string>
    <string name="pref_throttle_min">Throttle min</string>
    <string name="pref_throttle_max">Throttle max</string>

    <string name="show_ip">Show IP</string>
    <string name="show_info">Show WiFi info</string>

    <string name="save_title">Zapisz</string>
    <string name="period_label">T (msec):</string>

    <string name="power_to_usb_otg_title">Power to USB</string>
    <string name="power_to_usb_otg_msg">Do you want to enable power to USB OTG?</string>

    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_msg">Are you sure you want to exit?</string>

    <string name="permission_title">Displaying preview</string>
    <string name="permission_content">The app must be restarted after granting camera permission.</string>

    <!-- Strings related to Settings -->
    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_protocol_title">Protocol</string>
    <string-array name="pref_protocol_list_titles">
        <item>UDP</item>
        <item>TCP</item>
    </string-array>
    <string-array name="pref_protocol_list_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_title_orientation">Orientation (\u00B0)</string>
    <string name="pref_title_camera_facing">Camera</string>
    <string name="pref_header_environment">Environment</string>
    <string name="pref_declination_title">Magnetic declination</string>
    <string name="pref_declination_msg">Enter magnetic declination in degrees:</string>
    <string name="pref_pressure_title">Sealevel pressure</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data and sync</string>
    <string name="pref_title_system_sync_settings">Accounts</string>
    <string name="pref_title_wireless_settings">Wireless and networks</string>
    <string name="pref_title_wifi_settings">WiFi</string>
    <string name="set_port_title">Port</string>
    <string name="set_port_msg">Enter port number:</string>
    <string name="set_path_title">Server path</string>
    <string name="set_email_from">E-mail from</string>
    <string name="set_email_password">E-mail password</string>
    <string name="set_email_recipients">E-mail recipients</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- Symbols -->
    <string name="symbol_stabilisation_pitch">↕</string>
    <string name="symbol_stabilisation_roll">↔</string>
    <string name="symbol_arrow_left">❰</string>
    <string name="symbol_arrow_right">❱</string>
    <string name="symbol_double_arrow_left">❰❰</string>
    <string name="symbol_double_arrow_right">❱❱</string>
    <string name="symbol_arrow_up">↑</string>
    <string name="symbol_arrow_down">↓</string>
    <string name="symbol_double_arrow_up">↟</string>
    <string name="symbol_double_arrow_down">↡</string>

    <string-array name="pref_camera_list_titles">
        <item>front</item>
        <item>back</item>
        <item>external</item>
    </string-array>
    <string-array name="pref_camera_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
</resources>
