<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/switch_orientation"
        android:title="@string/switch_orientation_title" />
    <item
        android:id="@+id/power_to_usb"
        android:title="@string/power_to_usb_otg_title" />
    <item
        android:id="@+id/get_info"
        android:title="@string/get_info" />
    <item
        android:id="@+id/toggle_alt_spoof"
        android:title="@string/alt_spoof" />
    <item
        android:id="@+id/options"
        android:title="@string/options" />
    <item
        android:id="@+id/help"
        android:title="@string/help" />
<!--
    <item
        android:id="@+id/sql"
        android:title="SQL" />
-->
    <item
        android:id="@+id/close"
        android:title="@string/close" />
</menu>