<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="pl.bezzalogowe.PhoneUAV.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="pl.bezzalogowe.PhoneUAV.SettingsActivity$EnvironmentPreferenceFragment"
        android:icon="@drawable/ic_compass_black_24dp"
        android:title="@string/pref_header_environment" />
    <!-- https://materialdesignicons.com/icon/apple-safari -->

    <header
        android:fragment="pl.bezzalogowe.PhoneUAV.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
