<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->


    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>

    <Preference android:title="@string/pref_title_wireless_settings">
        <intent android:action="android.settings.WIRELESS_SETTINGS" />
    </Preference>

    <Preference android:title="@string/pref_title_wifi_settings">
        <intent android:action="android.settings.WIFI_SETTINGS" />
    </Preference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_protocol_list_titles"
        android:entryValues="@array/pref_protocol_list_values"
        android:key="protocol"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_protocol_title" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="6000"
        android:inputType="number"
        android:key="server-port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/set_port_title" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="text"
        android:key="server-path"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/set_path_title" />

    <!-- TODO -->
    <!--
    <EditTextPreference
        android:capitalize="words"
        android:inputType="text"
        android:key="email-smtp-host"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="email-smtp-host" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="number"
        android:key="email-smtp-port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="email-smtp-port" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="text"
        android:key="email-from"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/set_email_from" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textPassword"
        android:key="email-password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/set_email_password" />

    <EditTextPreference
        android:capitalize="words"
        android:inputType="text"
        android:key="email-list"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/set_email_recipients" />
-->
</PreferenceScreen>
